src/objects/Lcm_TechSpec__c.object
<CustomObject>
    <description>technische Spezifikation eines Tickets. Listet die einzelnen Bestandteile auf, die Teil der Umsetzung sind. Elemente sind Klassen, Pages, Felder, Validierungen, Layouts</description>
    <fields>
        <fullName>Lcm_Action__c</fullName>
        <description>Type of Change</description>
        <inlineHelpText>Type of Change</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_ApiName__c</fullName>
        <description>API-Name des Elements</description>
        <inlineHelpText>API-Name des Elements</inlineHelpText>
        <label>API-Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Case__c</fullName>
        <description>Ticket</description>
        <inlineHelpText>Ticket</inlineHelpText>
        <label>Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Technical Specifications</relationshipLabel>
        <relationshipName>Technical_Specification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lcm_Description__c</fullName>
        <description>ergänzende Beschreibung</description>
        <inlineHelpText>ergänzende Beschreibung</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_MetaType__c</fullName>
        <label>Meta-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomObjectTranslation</fullName>
                </value>
                <value>
                    <fullName>Custom Permission</fullName>
                </value>
                <value>
                    <fullName>EmailTemplate</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>FieldSet</fullName>
                </value>
                <value>
                    <fullName>FieldUpdate</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>FlowDefinition</fullName>
                </value>
                <value>
                    <fullName>HomePageComponent</fullName>
                </value>
                <value>
                    <fullName>HomePageLayout</fullName>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>ListView</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>PublicGroup</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>RecordType</fullName>
                </value>
                <value>
                    <fullName>RemoteSiteSetting</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_Spec__c</fullName>
        <description>lange Beschreibung einer technischen Spezifikation</description>
        <inlineHelpText>lange Beschreibung einer technischen Spezifikation</inlineHelpText>
        <label>Specification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Technical Specification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lcm_MetaType__c</columns>
        <columns>Lcm_ApiName__c</columns>
        <columns>Lcm_Spec__c</columns>
        <columns>Lcm_Action__c</columns>
        <columns>Lcm_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Technical Specification-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Specifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>